Add new ui-demo to replace storybook

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fern",
+  "name": "ferns",
   "private": true,
   "version": "0.1.0",
   "description": "Fullstack Express React Native framework for building iOS, Android, and Web apps with an Express API",
@@ -9,11 +9,10 @@
     "packages": [
       "./packages/*"
     ],
-    "nohoist": ["**/react-native", "**/react-native/**", "**/expo", "**/expo/**", "**/@storybook", "**/@storybook/**"]
+    "nohoist": ["**/react-native", "**/react-native/**", "**/expo", "**/expo/**","**/expo-*", "**/expo-*/**", "**/@storybook", "**/@storybook/**"]
 
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
   },
   "resolutions": {
     "@types/react": "17.0.44"
