--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@fern/storybook",
+  "name": "@ferns/storybook",
   "private": true,
   "version": "0.1.0",
-  "main": "__generated__/AppEntry.js",
+  "main": "./node_modules/expo/AppEntry.js",
   "scripts": {
     "build": "cd src && yarn build",
     "dev": "cd src && yarn dev",
-    "local": "tsc-watch --onSuccess \"cp -a src/dist/* ../totum/node_modules/react-unifier/dist\"",
     "build:web": "expo build:web",
     "lint": "prettier --list-different \"src/**/*.ts\" && eslint \"src/**/*.ts*\"",
     "lintfix": "eslint \"src/**/*.ts*\"",
@@ -19,8 +18,7 @@
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
     "storybook-web": "start-storybook -p 6006 --config-dir ./storybook-website",
-    "storybook-web-build": "build-storybook --config-dir ./storybook-website --output-dir dist-storybook-website",
-    "postinstall": "expo-yarn-workspaces postinstall"
+    "storybook-web-build": "build-storybook --config-dir ./storybook-website --output-dir dist-storybook-website"
   },
   "babel": {
     "presets": [
@@ -146,7 +144,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "expo-yarn-workspaces": "*",
+
     "@ferns/ui": "*",
     "@babel/core": "7.9.0",
     "@expo/vector-icons": "^12.0.0",
