--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,7 +21,7 @@
     "express"
   ],
   "author": "Josh Gachnang",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/joshgachnang/mongoose-rest-framework/issues"
   },
