--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,6 +1,9 @@
-name: Continuous Integration
+name: API Continuous Integration
 
-on: [push]
+on:
+  push:
+    paths:
+      - 'packages/api/**'
 
 defaults:
   run:
