--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -1,6 +1,9 @@
-name: Continuous Integration
+name: UI  Continuous Integration
 
-on: [push]
+on:
+  push:
+    paths:
+      - 'packages/ui/**'
 
 defaults:
   run:
