--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: yarn lint
       - name: yarn build
         run: yarn build
-      - name: yarn test
-        run: yarn test
-        env:
-          CI: true
+#      - name: yarn test
+#        run: yarn test
+#        env:
+#          CI: true
