--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --fix \"src/**/*.ts*\""
   },
   "license": "Apache-2.0",
   "dependencies": {
