--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -13,7 +13,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "expo-font": "^10.0.5",
-    "@ferns/ui": "*",
+    "ferns-ui": "*",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
