--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -118,6 +118,7 @@
     "tsc-watch": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "eslint-config-ferns": "*",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
