--- a/.github/workflows/ui-publish.yml
+++ b/.github/workflows/ui-publish.yml
@@ -41,7 +41,7 @@ jobs:
       # build the project
       - run: yarn build
       # publish to NPM -> there is one caveat, continue reading for the fix
-      - run: cd src && npm publish
+      - run: npm publish
         env:
           # Use a token to publish to NPM. See below for how to set it up
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
