--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -53,6 +53,10 @@
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
+  "resolutions": {
+    "update-input-width": "1.1.1",
+    "@types/react": "17.0.44"
+  },
   "private": true,
   "eslintConfig": {
     "extends": [
