--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -144,9 +144,9 @@
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
     "prettier": "^2.5.1",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "7.10.0",
+    "react-date-picker": "^7.10.0",
     "react-dev-utils": "^10.2.1",
     "react-dom": "17.0.2",
     "react-native": "^0.64.3",
@@ -165,7 +165,7 @@
   },
   "peerDependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/datetimepicker": "^4.0.0",
     "@react-native-picker/picker": "^2.2.1",
@@ -176,9 +176,9 @@
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "7.10.0",
+    "react-date-picker": "^7.10.0",
     "react-dev-utils": "^10.2.1",
     "react-dom": "17.0.2",
     "react-native": "^0.64.3",
