--- a/packages/ui-demo/app.json
+++ b/packages/ui-demo/app.json
@@ -26,7 +26,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/images/favicon.png",
+      "favicon": "./assets/favicon.png",
       "build": {
         "babel": {
           "include": ["victory-native", "@sentry/react-native"]
