--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "local": "tsc-watch --onSuccess \"cp -a dist/* ../totum/node_modules/react-unifier/dist\"",
-    "lint": "eslint --fix \"src/**/*.ts*\"",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "lintfix": "eslint --fix \"src/**/*.ts*\"",
     "build": "tsc",
     "dev": "tsc -w"
   },
@@ -115,35 +116,35 @@
     "@types/react": "17.0.44"
   },
   "dependencies": {
-    "tsc-watch": "^5.0.2"
+    "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "eslint-config-ferns": "*",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.4",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^4.0.0",
+    "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-picker/picker": "^2.2.1",
-    "@sentry/browser": "^5.17.0",
-    "@sentry/react": "^5.20.1",
-    "@sentry/react-native": "^1.7.1",
-    "@types/react-native": "^0.67.4",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.25.4",
+    "@sentry/browser": "^6.19.7",
+    "@sentry/react": "^6.19.7",
+    "@sentry/react-native": "^3.4.2",
+    "@types/lodash": "^4.14.182",
+    "@types/react-native": "^0.67.7",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-ferns": "^0.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-native": "^3.7.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "expo-font": "^10.0.5",
+    "expo-font": "^10.1.0",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
     "react-date-picker": "^7.10.0",
@@ -161,7 +162,7 @@
     "react-native-svg": "^12.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "typescript": "^4.1.5"
+    "typescript": "~4.1.5"
   },
   "peerDependencies": {
     "@expo/vector-icons": "^12.0.0",
