--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -37,11 +37,13 @@ jobs:
         # if: steps.yarn-cache.outputs.cache-hit != 'true' # I think we want to install every time,
         # but use the cache?
         run: yarn --frozen-lockfile
-        working-directory: './'
+        working-directory: 'packages/ui'
       - name: yarn lint
         run: yarn lint
+        working-directory: 'packages/ui'
       - name: yarn build
         run: yarn build
+        working-directory: 'packages/ui'
 #      - name: yarn test
 #        run: yarn test
 #        env:
