--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -27,7 +27,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-picker/picker": "2.2.1",
     "@sentry/browser": "^6.19.7",
     "@sentry/react": "^6.19.7",
@@ -35,7 +35,7 @@
     "expo": "~44.0.0",
     "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
-    "ferns-ui": "0.2.2",
+    "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
