Vendor Hyperlink to fix up some bugs around prop-types
It's been unsupported for about 3 years.

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -128,6 +128,7 @@
     "@sentry/react": "^6.19.7",
     "@sentry/react-native": "^3.4.2",
     "@types/lodash": "^4.14.182",
+    "@types/mdurl": "^1.0.2",
     "@types/react-native": "^0.67.7",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -153,7 +154,6 @@
     "react-native": "^0.64.3",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-haptic-feedback": "^1.10.0",
-    "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
     "react-native-navigation": "^6.12.0",
     "react-native-permissions": "^3.1.0",
@@ -185,7 +185,6 @@
     "react-native": "^0.64.3",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-haptic-feedback": "^1.10.0",
-    "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
     "react-native-navigation": "^6.12.0",
     "react-native-permissions": "^3.1.0",
