--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -9,8 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "lintfix": "eslint --fix \"src/**/*.ts*\""
+    "lint": "eslint \"**/*.ts*\"",
+    "lintfix": "eslint --fix \"**/*.ts*\""
   },
   "license": "Apache-2.0",
   "eslintConfig": {
@@ -76,6 +76,15 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.6.2",
     "typescript": "~4.1.5"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": false,
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "useTabs": false
   },
   "resolutions": {
     "update-input-width": "1.1.1",
