--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -8,6 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build": "expo build:web",
     "eject": "expo eject",
     "lint": "eslint \"**/*.ts*\"",
     "lintfix": "eslint --fix \"**/*.ts*\""
@@ -49,7 +50,6 @@
     "react-native-haptic-feedback": "^1.10.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
-    "react-native-navigation": "^6.12.0",
     "react-native-permissions": "^3.1.0",
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
