--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "expo-cli": "^5.4.9",
     "prettier": "^2.6.2",
     "typescript": "~4.1.5"
   },
