--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -134,7 +134,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
-    "eslint-config-ferns": "^0.3.2",
+    "eslint-config-ferns": "^0.4.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-lodash": "^7.1.0",
@@ -143,6 +143,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "2.0.0",
     "expo-font": "^10.0.5",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
