--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -25,43 +25,43 @@
     }
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-picker/picker": "2.2.1",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-picker/picker": "2.4.2",
     "@sentry/browser": "^6.19.7",
     "@sentry/react": "^6.19.7",
     "@sentry/react-native": "^3.4.2",
-    "expo": "~44.0.0",
-    "expo-font": "^10.0.5",
-    "expo-status-bar": "~1.2.0",
+    "expo": "^45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-status-bar": "~1.3.0",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-app-polyfill": "^1.0.6",
     "react-date-picker": "7.10.0",
     "react-dev-utils": "^11.0.4",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-haptic-feedback": "^1.10.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "0.17.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.67.6",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
@@ -77,7 +77,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-cli": "^5.4.9",
     "prettier": "^2.6.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   },
   "prettier": {
     "arrowParens": "always",
