--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -80,7 +80,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-cli": "^5.4.9",
     "prettier": "^2.6.2",
-    "typescript": "~4.7.4"
+    "typescript": "4.1.5"
   },
   "prettier": {
     "arrowParens": "always",
