--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -165,7 +165,7 @@
     "react-native-svg": "^12.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "typescript": "~4.7.4"
+    "typescript": "4.1.5"
   },
   "peerDependencies": {
     "@expo/vector-icons": "^12.0.0",
