Upgrade Expo to 45 (#45)
* Upgrade Expo to 45

* Fixes

* gitignore

* Update build commands

* Update lock file

* More dependency updates

* More dependency updates

* Back to 4.1.5 for TS

* Match dependencies

* more dependency updates

* Missed peer

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -120,17 +120,17 @@
     "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "^1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-picker/picker": "^2.2.1",
-    "@sentry/browser": "^6.19.7",
-    "@sentry/react": "^6.19.7",
-    "@sentry/react-native": "^3.4.2",
+    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-picker/picker": "2.4.2",
+    "@sentry/browser": "^7.3.1",
+    "@sentry/react": "^7.3.1",
+    "@sentry/react-native": "^4.1.0",
     "@types/lodash": "^4.14.182",
     "@types/mdurl": "^1.0.2",
-    "@types/react-native": "^0.67.7",
+    "@types/react-native": "^0.69.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
@@ -151,10 +151,10 @@
     "prettier": "^2.6.2",
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "^7.10.0",
-    "react-dev-utils": "^11.0.4",
+    "react-date-picker": "^8.4.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
-    "react-native": "^0.64.3",
+    "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-haptic-feedback": "^1.10.0",
     "react-native-modalize": "^2.0.12",
@@ -165,27 +165,27 @@
     "react-native-svg": "^12.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "typescript": "~4.1.5"
+    "typescript": "4.1.5"
   },
   "peerDependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "^1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-picker/picker": "^2.2.1",
-    "@sentry/browser": "^6.19.7",
-    "@sentry/react": "^6.19.7",
-    "@sentry/react-native": "^3.4.2",
+    "@react-native-community/datetimepicker": "^6.2.0",
+    "@react-native-picker/picker": "2.4.2",
+    "@sentry/browser": "^7.3.1",
+    "@sentry/react": "^7.3.1",
+    "@sentry/react-native": "^4.1.0",
     "expo-font": "^10.0.5",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "^7.10.0",
-    "react-dev-utils": "^11.0.4",
+    "react-date-picker": "^8.4.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
-    "react-native": "^0.64.3",
+    "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-haptic-feedback": "^1.10.0",
     "react-native-modalize": "^2.0.12",
