--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -28,27 +28,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-picker/picker": "2.4.2",
     "@sentry/browser": "^7.3.1",
     "@sentry/react": "^7.3.1",
     "@sentry/react-native": "^4.1.0",
     "expo": "^45.0.0",
-    "expo-font": "~10.1.0",
+    "expo-font": "^10.0.5",
     "expo-status-bar": "~1.3.0",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "8.4.0",
+    "react-date-picker": "^8.4.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-haptic-feedback": "^1.10.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
@@ -56,7 +56,7 @@
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "^2.8.0",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "0.17.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
