--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -145,6 +145,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-font": "^10.0.5",
+    "expo-haptics": "~11.2.0",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
@@ -156,7 +157,6 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.1.0",
-    "react-native-haptic-feedback": "^1.10.0",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
     "react-native-picker-select": "^8.0.0",
@@ -176,6 +176,7 @@
     "@sentry/react": "^7.3.1",
     "@sentry/react-native": "^4.1.0",
     "expo-font": "^10.0.5",
+    "expo-haptics": "~11.2.0",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
@@ -186,7 +187,6 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.1.0",
-    "react-native-haptic-feedback": "^1.10.0",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
     "react-native-picker-select": "^8.0.0",
