--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -37,7 +37,6 @@
     "@sentry/react-native": "^4.1.0",
     "expo": "^45.0.0",
     "expo-font": "^10.0.5",
-    "expo-haptics": "~11.2.0",
     "expo-status-bar": "~1.3.0",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
@@ -50,6 +49,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-haptic-feedback": "^1.10.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
