--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -48,9 +48,9 @@
     "moment-timezone": "^0.5.34",
     "react": "17.0.2",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^8.4.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1286.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-hyperlink": "^0.0.19",
