--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -149,10 +149,10 @@
     "prettier": "^2.6.2",
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "^8.4.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1286.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
@@ -176,10 +176,11 @@
     "moment-timezone": "^0.5.34",
     "react": "^17.0.0",
     "react-app-polyfill": "^1.0.6",
-    "react-date-picker": "^8.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1286.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-modalize": "^2.0.12",
     "react-native-permissions": "^3.1.0",
