--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ferns-ui-demo",
   "version": "1.0.0",
-  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -26,45 +25,49 @@
       }
     }
   },
+  "prettier": {
+    "arrowParens": "always",
+    "bracketSpacing": false,
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": false,
+    "trailingComma": "es5",
+    "useTabs": false
+  },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^6.2.0",
-    "@react-native-picker/picker": "2.4.2",
-    "@sentry/browser": "^7.3.1",
-    "@sentry/react": "^7.3.1",
-    "@sentry/react-native": "^4.1.0",
-    "expo": "^45.0.0",
-    "expo-font": "^10.0.5",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/blur": "^4.2.0",
+    "@react-native-community/datetimepicker": "^6.3.1",
+    "@react-native-picker/picker": "2.4.0",
+    "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
     "expo-status-bar": "~1.3.0",
     "ferns-ui": "*",
-    "lodash": "^4.17.21",
-    "mixpanel-browser": "^2.38.0",
     "moment-timezone": "^0.5.34",
-    "react": "^17.0.0",
-    "react-app-polyfill": "^1.0.6",
+    "react": "17.0.2",
+    "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^8.4.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "^2.1.0",
-    "react-native-haptic-feedback": "^1.10.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-haptic-feedback": "^1.14.0",
     "react-native-hyperlink": "^0.0.19",
-    "react-native-modalize": "^2.0.12",
-    "react-native-permissions": "^3.1.0",
-    "react-native-picker-select": "^8.0.0",
+    "react-native-modalize": "^2.0.13",
+    "react-native-permissions": "^3.6.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
@@ -78,21 +81,7 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-cli": "^5.4.9",
     "prettier": "^2.6.2",
-    "typescript": "4.1.5"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "bracketSpacing": false,
-    "printWidth": 100,
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "useTabs": false
-  },
-  "resolutions": {
-    "update-input-width": "1.1.1",
-    "@types/react": "17.0.44"
+    "typescript": "~4.1.5"
   }
 }
