--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -44,7 +44,7 @@
     "expo-font": "~10.1.0",
     "expo-haptics": "~11.2.0",
     "expo-status-bar": "~1.3.0",
-    "ferns-ui": "*",
+    "ferns-ui": "~0.6.4",
     "moment-timezone": "^0.5.34",
     "react": "17.0.2",
     "react-app-polyfill": "^3.0.0",
