Readding some config

--- a/packages/ui-demo/app.json
+++ b/packages/ui-demo/app.json
@@ -27,7 +27,12 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "build": {
+        "babel": {
+          "include": ["victory-native"]
+        }
+      }
     }
   }
 }
