--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "expo-cli": "^6.0.1",
     "prettier": "^2.6.2",
     "typescript": "~4.1.5"
   }
