Fix ui-demo with sentry issue preventing mobile from working (#67)
* Fix ui-demo with sentry issue preventing mobile from working

* Fix ui-demo ferns-ui version

* Update lock file

* Readding some config

* Forgot to re-add expo-cli dev dependency

--- a/packages/ui-demo/app.json
+++ b/packages/ui-demo/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -29,7 +30,7 @@
       "favicon": "./assets/favicon.png",
       "build": {
         "babel": {
-          "include": ["victory-native", "@sentry/react-native"]
+          "include": ["victory-native"]
         }
       }
     }
