Upgrade expo and fix ios launch issue

--- a/packages/ui-demo/app.json
+++ b/packages/ui-demo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ui-demo",
-    "slug": "ui-demo",
+    "name": "ferns-ui-demo",
+    "slug": "ferns-ui-demo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
