--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -38,36 +38,36 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/blur": "^4.2.0",
-    "@react-native-community/datetimepicker": "^6.3.1",
-    "@react-native-picker/picker": "2.4.0",
-    "expo": "~45.0.0",
-    "expo-font": "~10.1.0",
-    "expo-haptics": "~11.2.0",
-    "expo-status-bar": "~1.3.0",
-    "ferns-ui": "~0.6.4",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-picker/picker": "2.4.2",
+    "expo": "^46.0.0",
+    "expo-font": "~10.2.0",
+    "expo-haptics": "~11.3.0",
+    "expo-status-bar": "~1.4.0",
+    "ferns-ui": "~0.7.0",
     "moment-timezone": "^0.5.34",
-    "react": "17.0.2",
+    "react": "18.0.0",
     "react-app-polyfill": "^3.0.0",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.4",
     "react-native-calendars": "^1.1286.0",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-modalize": "^2.0.13",
     "react-native-permissions": "^3.6.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.7",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
@@ -81,8 +81,8 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-cli": "^6.0.1",
+    "expo-cli": "^6.0.5",
     "prettier": "^2.6.2",
-    "typescript": "~4.1.5"
+    "typescript": "^4.6.3"
   }
 }
