--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -127,7 +127,9 @@
     "@react-native-picker/picker": "2.4.4",
     "@types/lodash": "^4.14.184",
     "@types/mdurl": "^1.0.2",
+    "@types/react-datetime-picker": "^3.4.1",
     "@types/react-native": "^0.69.1",
+    "@types/react-time-picker": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "eslint": "^8.22.0",
@@ -149,6 +151,8 @@
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-date-picker": "^8.4.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.69.4",
@@ -161,6 +165,7 @@
     "react-native-svg": "^13.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-time-picker": "^4.5.0",
     "typescript": "4.1.5"
   },
   "peerDependencies": {
