--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -44,6 +44,7 @@
     "expo": "^46.0.0",
     "expo-font": "~10.2.0",
     "expo-haptics": "~11.3.0",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "ferns-ui": "~0.11.3",
     "moment-timezone": "^0.5.34",
