dependency updates and get them in line with other repos

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -113,92 +113,90 @@
     ]
   },
   "resolutions": {
-    "update-input-width": "1.1.1",
-    "@types/react": "17.0.44"
+    "update-input-width": "1.1.1"
   },
   "dependencies": {
-    "expo-image-picker": "^13.3.1",
     "tsc-watch": "^5.0.3"
   },
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/blur": "^4.2.0",
-    "@react-native-community/datetimepicker": "^6.3.2",
-    "@react-native-picker/picker": "2.4.4",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
     "@types/lodash": "^4.14.184",
     "@types/mdurl": "^1.0.2",
     "@types/react-datetime-picker": "^3.4.1",
-    "@types/react-native": "^0.69.1",
+    "@types/react-native": "~0.70.6",
     "@types/react-time-picker": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
-    "eslint": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.31.0",
     "eslint-config-ferns": "^0.4.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
-    "expo-font": "^10.0.5",
-    "expo-haptics": "~11.3.0",
-    "expo-image-manipulator": "^10.4.0",
-    "expo-image-picker": "^13.3.1",
+    "expo-font": "~11.0.1",
+    "expo-haptics": "~12.0.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
-    "moment-timezone": "^0.5.35",
-    "prettier": "^2.6.2",
-    "react": "^18.2.0",
+    "moment-timezone": "^0.5.40",
+    "prettier": "^2.8.2",
+    "react": "18.1.0",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^9.0.0",
-    "react-datetime-picker": "^4.0.1",
+    "react-date-picker": "^8.4.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "18.2.0",
-    "react-native": "0.69.4",
+    "react-dom": "18",
+    "react-native": "0.70.5",
     "react-native-calendars": "^1.1288.2",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.6.1",
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-svg": "^13.0.0",
+    "react-native-svg": "13.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-time-picker": "^5.0.0",
-    "typescript": "4.1.5"
+    "react-time-picker": "^4.5.0",
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/blur": "^4.2.0",
-    "@react-native-community/datetimepicker": "^6.3.2",
-    "@react-native-picker/picker": "2.4.4",
-    "expo-font": "^10.0.5",
-    "expo-haptics": "~11.3.0",
-    "expo-image-manipulator": "^10.4.0",
-    "expo-image-picker": "^13.3.1",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
+    "expo-font": "~11.0.1",
+    "expo-haptics": "~12.0.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
     "lodash": "^4.17.21",
     "mixpanel-browser": "^2.38.0",
-    "moment-timezone": "^0.5.35",
-    "react": "^18.2.0",
+    "moment-timezone": "^0.5.40",
+    "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
-    "react-datetime-picker": "^4.0.1",
+    "react-datetime-picker": "^3.5.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "18.2.0",
-    "react-native": "0.69.4",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-calendars": "^1.1288.2",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.6.1",
     "react-native-picker-select": "^8.0.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-svg": "^13.0.0",
+    "react-native-svg": "13.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-time-picker": "^5.0.0"
+    "react-time-picker": "^4.5.0"
   }
 }
