--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -48,6 +48,7 @@
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "ferns-ui": "~0.11.3",
+    "libphonenumber-js": "^1.10.16",
     "moment-timezone": "^0.5.34",
     "react": "18.0.0",
     "react-app-polyfill": "^3.0.0",
