Break the build preview into its own script, rollback test text change

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
-    "build-web": "yarn build-ui && expo build:web",
+    "build-preview": "yarn build-ui && yarn build-web",
+    "build-web": "expo build:web",
     "build-ios": "expo build:ios",
     "build-android": "expo build:android",
     "eject": "expo eject",
