Use npx for expo cli

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
     "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
     "build-preview": "yarn build-ui && yarn build-web",
-    "build-web": "expo build:web",
-    "build-ios": "expo build:ios",
-    "build-android": "expo build:android",
-    "eject": "expo eject",
+    "build-web": "npx expo build:web",
+    "build-ios": "npx expo build:ios",
+    "build-android": "npx expo build:android",
+    "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
     "lintfix": "eslint --fix \"**/*.ts*\""
   },
@@ -57,7 +57,7 @@
     "react-date-picker": "^9.2.0",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-haptic-feedback": "^1.14.0",
