Update build commands

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "npx expo start",
-    "android": "npx expo start --android",
-    "ios": "npx expo start --ios",
-    "web": "npx expo start --web",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
     "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
     "build-preview": "yarn build-ui && yarn build-web",
-    "build-web": "npx expo build:web",
-    "build-ios": "npx expo build:ios",
-    "build-android": "npx expo build:android",
+    "build-web": "npx expo export:web",
     "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
     "lintfix": "eslint --fix \"**/*.ts*\""
