Create new date modal, update modal for mobile
For TextField and Field, when set to date, show a modal with a calendar
in it to pick the date. Add a time and datetime type to both, showing a
time picker (either spinner on mobile or text inputs on web) and
calendar + time picker respectively. This solves the various z-index
issues, styling issues, and issues trying to pick dates in constrained
spaces.

On mobile, show an action sheet whenever we would show a modal on web.
This mimics the iOS standard for showing sheets. In the future, we
should make action sheet behave more like a modal on Android (similar to
its normal sheets)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "yarn --cwd packages/ui-demo web",
     "ios": "yarn --cwd packages/ui-demo ios",
     "android": "yarn --cwd packages/ui-demo android",
+    "lint": "yarn --cwd packages/ui-demo lint && yarn --cwd packages/ui lint",
     "build": "yarn --cwd packages/ui build",
-    "preview": "yarn build && yarn --cwd packages/ui-demo build-web"
+    "preview": "yarn build && yarn --cwd packages/ui-demo build-web",
+    "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/ui-demo/node_modules && yarn"
   },
   "resolutions": {
     "@types/react": "17.0.44"
