--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -54,7 +54,8 @@
     "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-calendars": "^1.1293.0",
+    "react-native-actions-sheet": "^0.8.29",
+    "react-native-calendars": "^1.1295.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-hyperlink": "^0.0.22",
