--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -113,8 +113,7 @@
     ]
   },
   "dependencies": {
-    "react-native-swiper-flatlist": "^3.1.1",
-    "tsc-watch": "^5.0.3"
+
   },
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -154,17 +153,20 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-calendars": "^1.1293.0",
+    "react-native-actions-sheet": "^0.8.29",
+    "react-native-calendars": "^1.1295.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
     "react-native-svg": "^13.4.0",
+    "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-time-picker": "^6.0.4",
+    "tsc-watch": "^5.0.3",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
@@ -200,7 +202,8 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-calendars": "^1.1293.0",
+    "react-native-actions-sheet": "^0.8.29",
+    "react-native-calendars": "^1.1295.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
