Fix up building preview

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -7,8 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
-    "build-preview": "yarn build-ui && yarn build-web",
+    "build-preview": "yarn build-web",
     "build-web": "npx expo export:web",
     "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
