--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "web": "yarn --cwd packages/ui-demo web",
+    "ios": "yarn --cwd packages/ui-demo ios",
+    "android": "yarn --cwd packages/ui-demo android",
     "build": "yarn --cwd packages/ui build",
-    "dev": "yarn --cwd packages/ui dev",
-    "make-links": "cd packages/ui && yarn link && cd ../ui-demo && yarn link ferns-ui"
+    "preview": "yarn --cwd packages/ui-demo build-web"
   },
   "devDependencies": {
   },
